feat: added caching enhance code structure (#1)
* db caching

* added caching

* added variables to test

* caching instruction

* changed db cache into caffeine cache

* Update README.md

* feat : added gitAdapter make code cleaner

* feat: entity classes

* fix: tests and config clean up