@@ -1,112 +1,61 @@
 package org.apiteria.project.services;
 
 
+import lombok.AllArgsConstructor;
+import org.apiteria.project.aspects.Cached;
+import org.apiteria.project.entity.Branch;
+import org.apiteria.project.entity.GitBranchResponse;
+import org.apiteria.project.entity.GitRepoResponse;
+import org.apiteria.project.entity.Repo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.info.ProjectInfoProperties;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.env.Environment;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestTemplate;
 
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class GitService {
 
-    private final Environment env;
-    private final RestTemplate restTemplate;
-    final Logger logger = LoggerFactory.getLogger(GitService.class);
-
-    GitService(RestTemplate restTemplate, Environment environment) {
-        this.restTemplate = restTemplate;
-        this.env = environment;
-        if (env.getProperty("api.gittoken").isBlank()) {
-            logger.warn("No API key provided consider api key for more requestes");
-        }
-    }
-
-    public List<Map<String, Object>> getReposAsList(String nickname) throws Exception {
-        String url = "https://api.github.com/users/{nickname}/repos";
-
-        HttpEntity<String> entity = getAuthorizationIfGitTokenExists();
-        //System.out.println(gitTokenOptional.isPresent());
 
 
-        ResponseEntity<List<Map<String, Object>>> response = restTemplate.exchange(
-                url,
-                HttpMethod.GET,
-                entity,
-                new ParameterizedTypeReference<List<Map<String, Object>>>() {
-                },
-                nickname
-        );
+    private final GitAdapter gitAdapter;
 
-        List<Map<String, Object>> repos = response.getBody();
+    @Cacheable(value = "cached-repos", key = "#nickname")
+    public List<Repo> getReposAsList(String nickname) throws Exception {
+
+        var repos = gitAdapter.getRepos(nickname);
 
         repos = filterDataForNotForkedRepos(repos);
-        addBranchesToRepos(repos, nickname);
 
-        return repos;
+        return addBranchesToRepos(repos);
     }
 
-    private List<Map<String, Object>> filterDataForNotForkedRepos(List<Map<String, Object>> repos) {
-        return repos.stream().filter(repo ->
-                repo.containsKey("fork")).filter(repo ->
-                repo.get("fork").toString().equals("false")).map(repo ->
-        {
-            HashMap<String, Object> owner = (HashMap<String, Object>) repo.get("owner");
-
-            LinkedHashMap<String, Object> data = new LinkedHashMap<>();
-            data.put("login", owner.get("login"));
-            data.put("repositoryName", repo.get("name"));
-
-            return data;
-        }).collect(Collectors.toList());
+    private List<GitRepoResponse> filterDataForNotForkedRepos(List<GitRepoResponse > repos) {
+        return repos.stream().filter(r->r.fork().equals(false)).toList();
 
     }
 
-    private void addBranchesToRepos(List<Map<String, Object>> repos, String nickname) {
-        repos.parallelStream().forEach(repo -> {
-            repo.put("branches", getBranchesFromRepo(nickname, repo.get("repositoryName").toString()));
-        });
+    private List<Repo> addBranchesToRepos(List<GitRepoResponse> repos) {
+        return repos.parallelStream().map(repo -> {
+           return new Repo(repo.owner().login(),repo.name(),
+               gitAdapter.getBranchesFromRepo(repo.owner().login(),repo.name()).stream().map(this::mapBranchResponse).toList());
+        }).toList();
+    }
+    private Branch mapBranchResponse(GitBranchResponse branchResponse) {
+        return new Branch(branchResponse.name(),branchResponse.commit().sha());
     }
 
-    private List<Map<String, Object>> getBranchesFromRepo(String login, String repo) {
-        String url = "https://api.github.com/repos/{login}/{repo}/branches";
 
-        HttpEntity<String> entity = getAuthorizationIfGitTokenExists();
 
-        ResponseEntity<List<Map<String, Object>>> response = restTemplate.exchange(
-                url,
-                HttpMethod.GET,
-                entity,
-                new ParameterizedTypeReference<List<Map<String, Object>>>() {
-                },
-                login,
-                repo
-        );
-        List<Map<String, Object>> data = response.getBody();
-        return data.stream().map(branch -> {
-            HashMap<String, Object> commit = (HashMap<String, Object>) (branch.get("commit"));
-            return Map.of(
-                    "name", branch.get("name"),
-                    "sha", commit.get("sha"));
-        }).collect(Collectors.toList());
-    }
-
-    private HttpEntity<String> getAuthorizationIfGitTokenExists() {
-        HttpHeaders headers = new HttpHeaders();
-        HttpEntity<String> entity = null;
-        if (!env.getProperty("api.gittoken").isBlank()) {
-            headers.setContentType(MediaType.APPLICATION_JSON);
-            headers.set("Authorization", "Bearer " + env.getProperty("api.gittoken"));
-            entity = new HttpEntity<String>(headers);
-
-        }
-        return entity;
-    }
 }
